ARTEMIS-5293 use Files.readString() & Files.writeString() where possible